<resources>
    <string name="app_name">MyShopApp</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_account">CREATE ACCOUNT</string>

    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_repeat_password">Repeat Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree to the terms and conditions.</string>
    <string name="progress_text">Please wait</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_desc">Enter your username or E-mail address and we will send you an email to reset your password</string>
    <string name="btn_lbl_submit">SUBMIT</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="et_hint_phone">Phone Number</string>
    <string name="rb_lbl_unspecified">Hidden</string>
    <string name="skip">Skip</string>

    <!--    <string name="title_activity_dashboard">DashboardActivity</string>-->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="please_click_again">Please click back again to exit</string>
    <string name="title_products">My Products</string>
    <string name="title_orders">Orders</string>
    <string name="settings">Settings</string>

    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">Edit profile</string>
    <string name="cancel">Cancel</string>
    <string name="action_add_product">Add product</string>

    <string name="title_add_product">Add product</string>
    <string name="et_hint_product_title">Title</string>
    <string name="et_hint_product_price">Price (€)</string>
    <string name="et_hint_product_quantity">Quantity</string>
    <string name="et_hint_product_desc">Product Description (optional)</string>
    <string name="err_msg_enter_title">Please enter product title</string>
    <string name="err_msg_enter_price">Please enter product price</string>
    <string name="err_msg_enter_quantity">Please enter the quantity of products</string>
    <string name="lbl_mandatory">* = Mandatory fields</string>
    <string name="et_hint_product_name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_products_found">No products found</string>

    <string name="title_product_details">PRODUCT DETAILS</string>
    <string name="lbl_product_description">Product Description</string>
    <string name="lbl_product_details_stock_quantity">Stock Quantity</string>
    <string name="title_edit_product">Edit product</string>

    <string name="btn_lbl_add_to_cart">Add to cart</string>
    <string name="btn_lbl_go_to_cart">Go to cart</string>
    <string name="empty_cart">Your cart is empty</string>
    <string name="my_cart">My cart</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="cart">Cart</string>

    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Addresses Found!</string>
    <string name="lbL_add_address">Add Address</string>

    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="err_msg_enter_full_address_name">Please enter full name</string>
    <string name="err_msg_enter_phone">You must enter phone number</string>
    <string name="err_msg_enter_address">You must enter the address</string>
    <string name="err_msg_enter_zip_code">You must enter zip code</string>

    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_found">You have not placed any orders yet</string>
    <string name="title_order_details">Order details</string>
</resources>