<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UserProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbCompleteProfile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.shopappfirebase.utils.MSATextViewBold
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/title_edit_profile"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbCompleteProfile"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/flUserImage"
                android:layout_width="@dimen/profile_user_image_size"
                android:layout_height="@dimen/profile_user_image_size"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/profile_user_image_marginTop">

                <ImageView
                    android:id="@+id/ivUserImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/profile_user_photo_margin"
                    android:background="@color/lightGrey"
                    android:contentDescription="@string/content_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_user_placeholder" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/user_image_background" />

            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/register_field_margin_top"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/colorSecondaryText">

                <com.example.shopappfirebase.utils.MSAEditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_text_size"
                    tools:text="Janez" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/register_field_margin_top"
                android:hint="@string/hint_last_name"
                android:textColorHint="@color/colorSecondaryText">

                <com.example.shopappfirebase.utils.MSAEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_text_size"
                    tools:text="Novak" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/register_field_margin_top"
                android:hint="@string/et_hint_email_id"
                android:textColorHint="@color/colorSecondaryText">

                <com.example.shopappfirebase.utils.MSAEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/et_text_size"
                    tools:text="abc@gmail.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhoneNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="@dimen/register_field_margin_top"
                android:hint="@string/et_hint_phone"
                android:textColorHint="@color/colorSecondaryText">

                <com.example.shopappfirebase.utils.MSAEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:padding="@dimen/et_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/et_text_size"
                    tools:text="040414123" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_radio_button_height"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <com.example.shopappfirebase.utils.MSARadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/rb_lbl_male"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textStyle="bold" />

                <com.example.shopappfirebase.utils.MSARadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/rb_lbl_female"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textStyle="bold" />

                <com.example.shopappfirebase.utils.MSARadioButton
                    android:id="@+id/rbHidden"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/drawable_gender_tab_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/rb_lbl_unspecified"
                    android:textAllCaps="true"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:textStyle="bold" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/complete_profile_field_margin_top">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:layout_marginHorizontal="16dp"/>

                <com.example.shopappfirebase.utils.MSAButton
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/button_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/btn_padding"
                    android:text="@string/btn_lbl_save"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size" />

                <com.example.shopappfirebase.utils.MSATextViewRegular
                    android:id="@+id/tvSkip"
                    android:layout_marginHorizontal="16dp"
                    android:background="@drawable/item_grey_border_background"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/skip"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

</androidx.constraintlayout.widget.ConstraintLayout>